# MiniTensor

./: .gitignore  CMakeLists.txt  Tensor.cpp  Tensor.h  main.cpp
tests/: test_tensor.cpp
